# beara_bones

./: .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  .pylintrc  .secrets.baseline  Makefile  Pipfile  README.md  mypy.ini  pyproject.toml  requirements.txt
beara_bones/: manage.py
beara_bones/beara_bones/: __init__.py  asgi.py  settings.py  settings_dev.py  urls.py  wsgi.py
beara_bones/data/: admin.py  admin_views.py  apps.py  dash_app.py  dashboard_utils.py  loading.py  models.py  pipeline_runner.py  tests.py  urls.py  views.py
beara_bones/data/assets/: crest_grid.css
beara_bones/data/management/commands/: ingest_football.py  rebuild_football_from_minio.py  run_football_pipeline.py
beara_bones/data/migrations/: 0001_football_league_season_fixture.py  0002_seed_league_season.py  0003_pipelinerun.py  0004_fixture_result_and_team_game_views.py
beara_bones/data/static/data/css/: crest_grid.css
beara_bones/data/static/data/js/: dashAgGridComponentFunctions.js
beara_bones/data/templates/admin/data/: pipeline_control.html
beara_bones/data/templates/data/: data.html  data_fragment.html
beara_bones/football_data/: fixture_data.py  urls.py  views.py
beara_bones/football_data/templates/football_data/: index.html
beara_bones/home/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
beara_bones/home/management/commands/: ingest_football.py
beara_bones/home/static/home/css/: base_style.css  cover.css
beara_bones/home/templates/home/: about.html  base.html  data.html  data_fragment.html  if-.html  index.html
beara_bones/main/: apps.py  urls.py  views.py
beara_bones/main/static/main/css/: style.css
beara_bones/main/templates/main/: base.html  index.html
data_modelling/: .user.yml  dbt_project.yml  profiles.yml
data_modelling/models/: sources.yml
data_modelling/models/marts/: fct_fixtures.sql  schema.yml
data_modelling/models/staging/: schema.yml  stg_fixtures.sql
football/: __init__.py  build_views.py  crests.py  ingest.py  locking.py  minio_utils.py  pipeline.py  processed.py  transform.py
football/soda/: configuration.yml  ds_config.yml
football/soda/checks/: fixtures.yml
football/soda/contracts/: fixtures.yaml
tests/: test_football.py
